<resources>
    <string name="app_name">FMC</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="app_label">FMC</string>
    <string name="facebook_app_id">815594675161925</string>
    <string name="wall">WALL</string>
    <string name="faq">FAQ</string>
    <string name="bitch">B*ITCH</string>
    <string name="more">MORE</string>
    <string name="fmc_logo">FMC</string>
    <string name="add_your_mommy">Add Your Mommy</string>
    <string name="enter_your_code">Enter Verification Code</string>
    <string name="unable_to_get_info">Unable to get your information. Please try again</string>
    <string name="error_while_get_info">Error while getting your information! Please try again</string>
    <string name="error_while_get_wall">Error while getting wall data! Please try again</string>
    <string name="temp_Comment_text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="fetching_WallData">Please wait Fetching your Wall&#8230;</string>
    <string name="please_wait">Please wait &#8230;</string>
    <string name="show_global">Show Global Wall</string>
    <string name="show_local">Show Local Wall</string>
    <string name="add_new_wall_post">Add a new Wall Post</string>
    <string name="post_comment">Post your comment</string>
    <string name="no_internet_or_error">Error! while fetching data. Please check your Internet Connection or try again later.</string>
    <string name="Join_The_Gang">Join the gang of MOMS who TRUST us \n You know you want to :)</string>
    <string name="welcome_to_FMC">%s,\n Welcome to FMC!</string>
    <string name="get_started">Lets get started</string>
    <string name="temp_name">Ruchita Dar Shah</string>
    <string name="cancel">Cancel</string>
    <string name="done">Done</string>
    <string name="select_hashtag">Select hashtags</string>
    <string name="bio">Bio</string>
    <string name="website">Website</string>
    <string name="private_information">Private Information</string>
    <string name="birthday">Birthday</string>
    <string name="bitch_username">B*tch username</string>
    <string name="bitch_password">B*tch Password</string>
    <string name="children_info">Children\'s Info</string>
    <string name="gender_prompt">Gender</string>
    <string name="age">Age</string>
    <string name="please_enter_birthday">Please enter your birthday</string>
    <string name="please_enter_username">Please enter your username</string>
    <string name="please_enter_password">Please enter your password</string>
    <string name="please_enter_child_age">Please enter your child\'s age</string>
    <string name="field_cannot_be_empty">This field cannot be empty</string>
    <string name="error">Error</string>
    <string name="ruchita_name">Ruchita Dar Shah</string>
    <string name="hashtags_sample">#beauty #health #events #bollywood</string>
    <string name="bio_sample">Chief Mommy Officer of First Mom\'s club an FB group of over 27K involved and aware moms.</string>
    <string name="website_sample">www.firstmomsclub.in</string>
    <string name="profile">Profile</string>
    <string name="share">Share</string>
    <string name="comment">Comment</string>
    <string name="like">Like</string>
    <string name="popularity">Popularity</string>
    <string name="location">Location</string>
    <string name="recent">Recent</string>
    <string name="sort_by">SORT BY</string>
    <string name="share_photo">Share Photo</string>
    <string name="photo_comment">Write Photo Comment</string>
    <string name="PROFILE">PROFILE</string>


    <string-array name="gender_array">
        <item>Male</item>
        <item>Female</item>
    </string-array>

    <string-array name="hashtag_data">
        <item>#events</item>
        <item>#beauty</item>
        <item>#food</item>
        <item>#music</item>
        <item>#bollywood</item>
        <item>#baby</item>
        <item>#pregnancy</item>
        <item>#health</item>
        <item>#news</item>
        <item>#shop</item>
        <item>#education</item>
    </string-array>
</resources>
