<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app1="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imgCoverPic"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1"

            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_launcher" />

        <ImageView
            android:id="@+id/imgEdit"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentRight="true"
            android:layout_gravity="right"
            android:src="@drawable/edit" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:id="@+id/txtName"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:gravity="center_horizontal"
                android:text="@string/ruchita_name"
                android:textColor="@color/main_color_red"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtHashTags"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center_horizontal"
                android:text="@string/hashtags_sample"
                android:textColor="@color/selected_yellow"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/txtBio"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center_horizontal"
                android:text="@string/bio_sample"
                android:textColor="@color/main_color_red"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/txtWebsite"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center_horizontal"
                android:text="@string/website_sample"
                android:textColor="@color/main_color_red_light"
                android:textSize="16sp" />
        </LinearLayout>
    </LinearLayout>

    <com.fmc.v1.view.CircularImageView
        android:id="@+id/imgPic"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_centerInParent="true"
        android:src="@drawable/contact"
        app1:border="true"
        app1:border_color="@color/circularimage_border_color"
        app1:border_width="1dp"
        app1:shadow="false" />


    <!--<ImageView
        android:id="@+id/imgEdit"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignParentRight="true"
        android:layout_marginTop="250dp"
        android:src="@drawable/edit"/>-->
    <!--<ImageView
        android:id="@+id/imgPic"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_centerInParent="true"
        android:src="@drawable/contact"/>-->
</RelativeLayout>